[package]
name = "seva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.10", features = ["derive"] }
handlebars = "4.5.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
seva-macros = {path = "seva-macros"}
pest = "2.7.5"
pest_derive = "2.7.5"
chrono = { version = "0.4.31", features = ["serde"] }

[workspace]
members = ["seva-macros"]
