[package]
name = "seva"
version = "0.1.1"
edition = "2021"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
description = "Simple directory http server inspired by Python's http.server"
repository = "https://github.com/mattgathu/seva"
license = "Apache-2.0"
readme = "README.md"
keywords = ["directory", "server", "http"]
categories = ["command-line-utilities", "web-programming::http-server"]
documentation = "https://docs.rs/seva"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.10", features = ["derive", "cargo"] }
handlebars = "4.5.0"
serde = { version = "1.0.193", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pest = "2.7.5"
pest_derive = "2.7.5"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.51"
ctrlc = { version = "3.4.1", features = ["termination"] }
contracts = "0.6.3"

[dev-dependencies]
maplit = "1.0.2"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["blocking"] }

